--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
     "experimentalDecorators": true,
     "lib": 
     [
-      "es2015", "es2017", "dom"
+      "es2015",
+      "es5",
+      "dom"
     ]
   },
   "include": [
