--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "sourceMap": false,
     "removeComments": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "lib": 
     [
       "es2015",
