--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.6.0",
-    "babel-preset-es2015": "^6.24.1",
     "browserify": "^14.3.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
@@ -26,6 +25,8 @@
     "watchify": "^3.9.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
     "gulp-minify": "^3.1.0"
   }
 }
