--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-inject-string": "^1.1.2",
+    "gulp-rename": "^2.0.0",
     "gulp-typescript": "^3.2.4",
     "gulp-uglify": "^3.0.2",
     "tsify": "^3.0.1",
@@ -27,6 +28,9 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
-    "gulp-minify": "^3.1.0"
+    "dts-bundle": "^0.7.3",
+    "gulp-minify": "^3.1.0",
+    "gulp-rollup": "^2.17.0",
+    "gulp-uglify-es": "^3.0.0"
   }
 }
