--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "amd",
     "target": "es5",
     "skipLibCheck": true,
-    "outFile": "./common.js",
+    "outFile": "./z-robbit-ioc.js",
     "declaration": true,
     "sourceMap": false,
     "removeComments": true,
