--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "dts-bundle": "^0.7.3",
     "gulp-minify": "^3.1.0",
     "gulp-rollup": "^2.17.0",
-    "gulp-uglify-es": "^3.0.0"
+    "gulp-uglify-es": "^3.0.0",
+    "rollup": "^2.66.1",
+    "rollup-plugin-babel": "^4.4.0"
   }
 }
